--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "all": "^0.0.0",
+    "jquery": "^3.6.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.14",
     "@types/node": "17.0.21",
     "@types/react": "17.0.41",
     "eslint": "8.11.0",
